unpackaged/main/default/objects/Account_Competitor__c/Account_Competitor__c.object-meta.xml
<CustomObject>
    <label>Account Competitor</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Account Competitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>