unpackaged/main/default/objects/Account_Competitor__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Core_Business__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Competitor</valueSetName>
    </valueSet>
</CustomField>