unpackaged/main/default/objects/Account_Competitor__c/fields/Core_Business__c.field-meta.xml
<CustomField>
    <fullName>Core_Business__c</fullName>
    <label>Core Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Core_Business</valueSetName>
    </valueSet>
</CustomField>